--- a/src/sample/EditProject.fxml
+++ b/src/sample/EditProject.fxml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Accordion?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.EditProjectController">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.EditProjectController">
     <tabs>
         <Tab text="Проект">
             <content>
@@ -234,14 +244,14 @@
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="524.0" prefWidth="1000.0">
                     <children>
-                        <TableView fx:id="furnitureTableView" prefHeight="300.0" prefWidth="2000.0">
+                        <TableView fx:id="furnitureTableView" layoutY="62.0" prefHeight="238.0" prefWidth="2000.0">
                             <columns>
                                 <TableColumn fx:id="colNameFurniture" prefWidth="108.0" text="Наименование" />
                                 <TableColumn prefWidth="25.0" text="П" />
                                 <TableColumn prefWidth="25.0" text="С" />
                                 <TableColumn fx:id="colUnitFurniture" prefWidth="58.0" text="Ед.изм." />
                                 <TableColumn fx:id="colQuantityFurniture" prefWidth="63.0" text="Кол-во" />
-                                <TableColumn fx:id="colOrdinalPricePerUnitFurniture" prefWidth="165.0" text="Цена порядковая за ед." />
+                                <TableColumn fx:id="colOrdinalPricePerUnitFurniture" prefWidth="125.0" text="Цена порядковая за ед." />
                                 <TableColumn fx:id="colPriceCPPerUnitFurniture" prefWidth="100.0" text="Цена по КП за ед." />
                                 <TableColumn fx:id="colPriceCPPerKeyFurniture" prefWidth="100.0" text="Цена по КП под ключ" />
                                 <TableColumn fx:id="colCostCPPerUnitFurniture" prefWidth="100.0" text="Стоимость по КП за ед." />
@@ -261,6 +271,8 @@
                                 <TableColumn fx:id="colCharacteristicsFurniture" prefWidth="85.0" text="Характеристики" />
                             </columns>
                         </TableView>
+                  <Text layoutX="14.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Помещение:" />
+                  <Button layoutX="423.0" layoutY="28.0" mnemonicParsing="false" text="Удалить" onAction="#deleteElementFurniture" />
                     </children>
                 </AnchorPane>
             </content>
