--- a/src/sample/Login.fxml
+++ b/src/sample/Login.fxml
@@ -7,20 +7,15 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0"
-            prefWidth="250.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="sample.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.LoginController">
     <children>
-        <Button layoutX="35.0" layoutY="220.0" mnemonicParsing="false" text="Войти" onAction="#login"
-                fx:id="loginSignUpButton"/>
-        <Button layoutX="120.0" layoutY="220.0" mnemonicParsing="false" text="Регистрация" onAction="#startRegistration"
-                fx:id="registrationSignUpButton"/>
-        <TextField layoutX="51.0" layoutY="84.0" fx:id="loginUser"/>
-        <PasswordField layoutX="51.0" layoutY="137.0" fx:id="passwordUser"/>
+        <Button fx:id="loginSignUpButton" layoutX="35.0" layoutY="220.0" mnemonicParsing="false" onAction="#login" text="Войти" />
+        <Button fx:id="registrationSignUpButton" layoutX="120.0" layoutY="220.0" mnemonicParsing="false" onAction="#startRegistration" text="Регистрация" />
+        <TextField fx:id="loginUser" layoutX="51.0" layoutY="84.0" promptText="Введите логин" />
+        <PasswordField fx:id="passwordUser" layoutX="51.0" layoutY="137.0" promptText="Введите пароль" />
         <Text layoutX="35.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Авторизация">
             <font>
-                <Font size="30.0"/>
+                <Font size="30.0" />
             </font>
         </Text>
     </children>
