--- a/src/sample/EditProject.fxml
+++ b/src/sample/EditProject.fxml
@@ -558,31 +558,31 @@
                                        <content>
                                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="700.0" prefWidth="1900.0">
                                              <children>
-                                                <TableView fx:id="materialTableViewWall2" layoutY="31.0" prefHeight="669.0" prefWidth="1900.0">
+                                                <TableView fx:id="appliancesTableViewOther" layoutY="31.0" prefHeight="669.0" prefWidth="1900.0">
                                                    <columns>
-                                                      <TableColumn fx:id="colNameMaterialWall2" prefWidth="108.0" text="Наименование" />
+                                                      <TableColumn fx:id="colNameAppliancesOther" prefWidth="108.0" text="Наименование" />
                                                       <TableColumn prefWidth="25.0" text="П" />
                                                       <TableColumn prefWidth="25.0" text="С" />
-                                                      <TableColumn fx:id="colUnitMaterialWall2" prefWidth="58.0" text="Ед.изм." />
-                                                      <TableColumn fx:id="colQuantityMaterialWall2" prefWidth="63.0" text="Кол-во" />
-                                                      <TableColumn fx:id="colOrdinalPriceUnitMaterialWall2" prefWidth="125.0" text="Цена порядковая за ед." />
-                                                      <TableColumn fx:id="colPriceCPUnitMaterialWall2" prefWidth="100.0" text="Цена по КП за ед." />
-                                                      <TableColumn fx:id="colPriceCPKeyMaterialWall2" prefWidth="100.0" text="Цена по КП под ключ" />
-                                                      <TableColumn fx:id="colCostCPUnitMaterialWall2" prefWidth="100.0" text="Стоимость по КП за ед." />
-                                                      <TableColumn fx:id="colPriceOrderMaterialWall2" prefWidth="100.0" text="Порядок цен" />
-                                                      <TableColumn fx:id="colCostCPMaterialWall2" prefWidth="85.0" text="Стоимость по КП" />
-                                                      <TableColumn fx:id="colProductionTimeMaterialWall2" prefWidth="85.0" text="Срок изготовления" />
-                                                      <TableColumn fx:id="colActualCostMaterialWall2" prefWidth="85.0" text="Стоимость фактическая" />
-                                                      <TableColumn fx:id="colActualDifferenceMaterialWall2" prefWidth="85.0" text="Разница фактическая" />
-                                                      <TableColumn fx:id="colPaidMaterialWall2" prefWidth="85.0" text="Оплачено" />
-                                                      <TableColumn fx:id="colResidueMaterialWall2" prefWidth="85.0" text="Остаток" />
-                                                      <TableColumn fx:id="colDateOfDeliveryMaterialWall2" prefWidth="85.0" text="Дата поставки" />
-                                                      <TableColumn fx:id="colPlannedCPMaterialWall2" prefWidth="85.0" text="КП плановое" />
-                                                      <TableColumn fx:id="colActualCPMaterialWall2" prefWidth="85.0" text="КП фактическое" />
-                                                      <TableColumn fx:id="colAccountMaterialWall2" prefWidth="55.0" text="Счет" />
-                                                      <TableColumn fx:id="colContactsMaterialWall2" prefWidth="85.0" text="Контакты" />
-                                                      <TableColumn fx:id="colNotesMaterialWall2" prefWidth="85.0" text="Примечания" />
-                                                      <TableColumn fx:id="colCharacteristicsMaterialWall2" prefWidth="85.0" text="Характеристики" />
+                                                      <TableColumn fx:id="colUnitAppliancesOther" prefWidth="58.0" text="Ед.изм." />
+                                                      <TableColumn fx:id="colQuantityAppliancesOther" prefWidth="63.0" text="Кол-во" />
+                                                      <TableColumn fx:id="colOrdinalPriceUnitAppliancesOther" prefWidth="125.0" text="Цена порядковая за ед." />
+                                                      <TableColumn fx:id="colPriceCPUnitAppliancesOther" prefWidth="100.0" text="Цена по КП за ед." />
+                                                      <TableColumn fx:id="colPriceCPKeyAppliancesOther" prefWidth="100.0" text="Цена по КП под ключ" />
+                                                      <TableColumn fx:id="colCostCPUnitAppliancesOther" prefWidth="100.0" text="Стоимость по КП за ед." />
+                                                      <TableColumn fx:id="colPriceOrderAppliancesOther" prefWidth="100.0" text="Порядок цен" />
+                                                      <TableColumn fx:id="colCostCPAppliancesOther" prefWidth="85.0" text="Стоимость по КП" />
+                                                      <TableColumn fx:id="colProductionTimeAppliancesOther" prefWidth="85.0" text="Срок изготовления" />
+                                                      <TableColumn fx:id="colActualCostAppliancesOther" prefWidth="85.0" text="Стоимость фактическая" />
+                                                      <TableColumn fx:id="colActualDifferenceAppliancesOther" prefWidth="85.0" text="Разница фактическая" />
+                                                      <TableColumn fx:id="colPaidAppliancesOther" prefWidth="85.0" text="Оплачено" />
+                                                      <TableColumn fx:id="colResidueAppliancesOther" prefWidth="85.0" text="Остаток" />
+                                                      <TableColumn fx:id="colDateOfDeliveryAppliancesOther" prefWidth="85.0" text="Дата поставки" />
+                                                      <TableColumn fx:id="colPlannedCPAppliancesOther" prefWidth="85.0" text="КП плановое" />
+                                                      <TableColumn fx:id="colActualCPAppliancesOther" prefWidth="85.0" text="КП фактическое" />
+                                                      <TableColumn fx:id="colAccountAppliancesOther" prefWidth="55.0" text="Счет" />
+                                                      <TableColumn fx:id="colContactsAppliancesOther" prefWidth="85.0" text="Контакты" />
+                                                      <TableColumn fx:id="colNotesAppliancesOther" prefWidth="85.0" text="Примечания" />
+                                                      <TableColumn fx:id="colCharacteristicsAppliancesOther" prefWidth="85.0" text="Характеристики" />
                                                    </columns>
                                                 </TableView>
                                                 <Button layoutX="110.0" layoutY="2.0" mnemonicParsing="false" text="Удалить" />
@@ -602,31 +602,31 @@
                                        <content>
                                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="700.0" prefWidth="1900.0">
                                              <children>
-                                                <TableView fx:id="materialTableViewWall3" layoutY="31.0" prefHeight="669.0" prefWidth="1900.0">
+                                                <TableView fx:id="appliancesTableViewDelivery" layoutY="31.0" prefHeight="669.0" prefWidth="1900.0">
                                                    <columns>
-                                                      <TableColumn fx:id="colNameMaterialWall3" prefWidth="108.0" text="Наименование" />
+                                                      <TableColumn fx:id="colNameMaterialDelivery" prefWidth="108.0" text="Наименование" />
                                                       <TableColumn prefWidth="25.0" text="П" />
                                                       <TableColumn prefWidth="25.0" text="С" />
-                                                      <TableColumn fx:id="colUnitMaterialWall3" prefWidth="58.0" text="Ед.изм." />
-                                                      <TableColumn fx:id="colQuantityMaterialWall3" prefWidth="63.0" text="Кол-во" />
-                                                      <TableColumn fx:id="colOrdinalPriceUnitMaterialWall3" prefWidth="125.0" text="Цена порядковая за ед." />
-                                                      <TableColumn fx:id="colPriceCPUnitMaterialWall3" prefWidth="100.0" text="Цена по КП за ед." />
-                                                      <TableColumn fx:id="colPriceCPKeyMaterialWall3" prefWidth="100.0" text="Цена по КП под ключ" />
-                                                      <TableColumn fx:id="colCostCPUnitMaterialWall3" prefWidth="100.0" text="Стоимость по КП за ед." />
-                                                      <TableColumn fx:id="colPriceOrderMaterialWall3" prefWidth="100.0" text="Порядок цен" />
-                                                      <TableColumn fx:id="colCostCPMaterialWall3" prefWidth="85.0" text="Стоимость по КП" />
-                                                      <TableColumn fx:id="colProductionTimeMaterialWall3" prefWidth="85.0" text="Срок изготовления" />
-                                                      <TableColumn fx:id="colActualCostMaterialWall3" prefWidth="85.0" text="Стоимость фактическая" />
-                                                      <TableColumn fx:id="colActualDifferenceMaterialWall3" prefWidth="85.0" text="Разница фактическая" />
-                                                      <TableColumn fx:id="colPaidMaterialWall3" prefWidth="85.0" text="Оплачено" />
-                                                      <TableColumn fx:id="colResidueMaterialWall3" prefWidth="85.0" text="Остаток" />
-                                                      <TableColumn fx:id="colDateOfDeliveryMaterialWall3" prefWidth="85.0" text="Дата поставки" />
-                                                      <TableColumn fx:id="colPlannedCPMaterialWall3" prefWidth="85.0" text="КП плановое" />
-                                                      <TableColumn fx:id="colActualCPMaterialWall3" prefWidth="85.0" text="КП фактическое" />
-                                                      <TableColumn fx:id="colAccountMaterialWall3" prefWidth="55.0" text="Счет" />
-                                                      <TableColumn fx:id="colContactsMaterialWall3" prefWidth="85.0" text="Контакты" />
-                                                      <TableColumn fx:id="colNotesMaterialWall3" prefWidth="85.0" text="Примечания" />
-                                                      <TableColumn fx:id="colCharacteristicsMaterialWall3" prefWidth="85.0" text="Характеристики" />
+                                                      <TableColumn fx:id="colUnitMaterialDelivery" prefWidth="58.0" text="Ед.изм." />
+                                                      <TableColumn fx:id="colQuantityMaterialDelivery" prefWidth="63.0" text="Кол-во" />
+                                                      <TableColumn fx:id="colOrdinalPriceUnitMaterialDelivery" prefWidth="125.0" text="Цена порядковая за ед." />
+                                                      <TableColumn fx:id="colPriceCPUnitMaterialDelivery" prefWidth="100.0" text="Цена по КП за ед." />
+                                                      <TableColumn fx:id="colPriceCPKeyMaterialDelivery" prefWidth="100.0" text="Цена по КП под ключ" />
+                                                      <TableColumn fx:id="colCostCPUnitMaterialDelivery" prefWidth="100.0" text="Стоимость по КП за ед." />
+                                                      <TableColumn fx:id="colPriceOrderMaterialDelivery" prefWidth="100.0" text="Порядок цен" />
+                                                      <TableColumn fx:id="colCostCPMaterialDelivery" prefWidth="85.0" text="Стоимость по КП" />
+                                                      <TableColumn fx:id="colProductionTimeMaterialDelivery" prefWidth="85.0" text="Срок изготовления" />
+                                                      <TableColumn fx:id="colActualCostMaterialDelivery" prefWidth="85.0" text="Стоимость фактическая" />
+                                                      <TableColumn fx:id="colActualDifferenceMaterialDelivery" prefWidth="85.0" text="Разница фактическая" />
+                                                      <TableColumn fx:id="colPaidMaterialDelivery" prefWidth="85.0" text="Оплачено" />
+                                                      <TableColumn fx:id="colResidueMaterialDelivery" prefWidth="85.0" text="Остаток" />
+                                                      <TableColumn fx:id="colDateOfDeliveryMaterialDelivery" prefWidth="85.0" text="Дата поставки" />
+                                                      <TableColumn fx:id="colPlannedCPMaterialDelivery" prefWidth="85.0" text="КП плановое" />
+                                                      <TableColumn fx:id="colActualCPMaterialDelivery" prefWidth="85.0" text="КП фактическое" />
+                                                      <TableColumn fx:id="colAccountMaterialDelivery" prefWidth="55.0" text="Счет" />
+                                                      <TableColumn fx:id="colContactsMaterialDelivery" prefWidth="85.0" text="Контакты" />
+                                                      <TableColumn fx:id="colNotesMaterialDelivery" prefWidth="85.0" text="Примечания" />
+                                                      <TableColumn fx:id="colCharacteristicsMaterialDelivery" prefWidth="85.0" text="Характеристики" />
                                                    </columns>
                                                 </TableView>
                                                 <Button layoutX="110.0" layoutY="2.0" mnemonicParsing="false" text="Удалить" />
